--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>canvas</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body onload="draw()">
+  <body>
     <table>
       <tr>
         <td><canvas id="tutorial" width="150" height="150"></canvas></td>
